files/iptables.txt
# Firewall configuration created and managed by puppet. Do not edit manually
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
# SSH
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
# HTTP
-A INPUT -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m tcp -p tcp --dport 8080 -j ACCEPT
# HTTP SSL
-A INPUT -m tcp -p tcp --dport 443 -j ACCEPT
# BIND / DNS
-A INPUT -p tcp -m tcp --dport  53 -j ACCEPT
-A INPUT -p udp -m udp --dport  53 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
